--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.6"
+    "ember-cli-babel": "^5.1.6",
+    "ember-cli-version-checker": "^1.2.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
