package.json: Ensure to be included *before* ember-cli-shims
otherwise importing from "ember-owner/get" will not work

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
+    "before": "ember-cli-shims",
     "after": "ember-factory-for-polyfill"
   }
 }
