--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "ember-ajax": "^2.0.1",
     "ember-cli": "^2.7.0",
     "ember-cli-app-version": "^1.0.0",
+    "ember-cli-babel": "^6.6.0",
     "ember-cli-content-security-policy": "0.5.0",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-htmlbars": "^1.0.3",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.4.2",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
     "ember-cli-qunit": "^3.1.0",
