--- a/package.json
+++ b/package.json
@@ -5,13 +5,8 @@
   "keywords": [
     "ember-addon"
   ],
-  "homepage": "https://github.com/rwjblue/ember-getowner-polyfill#readme",
-  "bugs": {
-    "url": "https://github.com/rwjblue/ember-getowner-polyfill/issues"
-  },
   "license": "MIT",
   "author": "Robert Jackson <me@rwjblue.com>",
-  "main": "index.js",
   "directories": {
     "test": "tests"
   },
@@ -29,32 +24,36 @@
     "ember-factory-for-polyfill": "^1.3.1"
   },
   "devDependencies": {
-    "broccoli-asset-rev": "^2.4.2",
-    "ember-ajax": "^2.0.1",
-    "ember-cli": "^2.7.0",
-    "ember-cli-app-version": "^1.0.0",
+    "broccoli-asset-rev": "^2.4.5",
+    "ember-ajax": "^3.0.0",
+    "ember-cli": "~2.16.2",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-content-security-policy": "0.5.0",
-    "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-eslint": "^4.0.0",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.2",
-    "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-jshint": "^1.0.0",
-    "ember-cli-qunit": "^3.1.0",
-    "ember-cli-release": "^0.2.9",
+    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-qunit": "^4.0.0",
+    "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-test-loader": "^1.1.0",
-    "ember-cli-uglify": "^1.2.0",
+    "ember-cli-uglify": "^2.0.0",
     "ember-debug-handlers-polyfill": "^1.0.3",
-    "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-export-application-global": "^1.0.5",
-    "ember-load-initializers": "^0.5.1",
-    "ember-resolver": "^2.0.3",
-    "loader.js": "^4.0.1"
+    "ember-disable-prototype-extensions": "^1.1.2",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.0.0",
+    "ember-resolver": "^4.0.0",
+    "ember-source": "~2.16.0",
+    "loader.js": "^4.2.3"
   },
   "engines": {
-    "node": ">= 4"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
+  "homepage": "https://github.com/rwjblue/ember-getowner-polyfill#readme",
+  "bugs": {
+    "url": "https://github.com/rwjblue/ember-getowner-polyfill/issues"
+  },
+  "main": "index.js",
   "ember-addon": {
     "configPath": "tests/dummy/config",
     "before": "ember-cli-shims",
