--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-cli-babel": "^7.19.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-inject-live-reload": "^2.0.2",
+    "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-uglify": "^3.0.0",
     "ember-debug-handlers-polyfill": "^1.0.3",
