--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "keywords": [
     "ember-addon"
   ],
+  "homepage": "https://github.com/rwjblue/ember-getowner-polyfill#readme",
+  "bugs": {
+    "url": "https://github.com/rwjblue/ember-getowner-polyfill/issues"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rwjblue/ember-getowner-polyfill.git"
   },
   "license": "MIT",
   "author": "Robert Jackson <me@rwjblue.com>",
+  "main": "index.js",
   "directories": {
     "test": "tests"
   },
@@ -58,16 +63,16 @@
     "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "qunit-dom": "^1.2.0"
+    "qunit-dom": "^1.2.0",
+    "release-it": "^13.5.7",
+    "release-it-lerna-changelog": "^2.3.0"
   },
   "engines": {
     "node": "10.* || >= 12"
   },
-  "homepage": "https://github.com/rwjblue/ember-getowner-polyfill#readme",
-  "bugs": {
-    "url": "https://github.com/rwjblue/ember-getowner-polyfill/issues"
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   },
-  "main": "index.js",
   "ember": {
     "edition": "octane"
   },
@@ -75,5 +80,20 @@
     "configPath": "tests/dummy/config",
     "before": "ember-cli-shims",
     "after": "ember-factory-for-polyfill"
+  },
+  "release-it": {
+    "plugins": {
+      "release-it-lerna-changelog": {
+        "infile": "CHANGELOG.md",
+        "launchEditor": true
+      }
+    },
+    "git": {
+      "tagName": "v${version}"
+    },
+    "github": {
+      "release": true,
+      "tokenRef": "GITHUB_AUTH"
+    }
   }
 }
