--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "ember-cli-babel": "^7.19.0",
     "ember-cli-version-checker": "^2.1.0",
+    "ember-compatibility-helpers": "^1.2.1",
     "ember-factory-for-polyfill": "^1.3.1"
   },
   "devDependencies": {
